// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<label
  className="cssClass[label] cssClass[nonempty]"
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <input
    className="cssClass[checkbox]"
    onBlur={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <span
    className="cssClass[checkboxIcon]"
  />
  <svg
    className="cssClass[checkmarkIcon]"
  />
  Sample Text
</label>
`;

exports[`Checkbox renders disabled state correctly 1`] = `
<label
  className="cssClass[label] cssClass[disabled] cssClass[nonempty]"
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <input
    className="cssClass[checkbox]"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <span
    className="cssClass[checkboxIcon]"
  />
  <svg
    className="cssClass[checkmarkIcon]"
  />
  Sample Text
</label>
`;
